@@ -115,6 +115,7 @@
 
       <child>
 	<widget class="GtkHBox" id="hbox_top">
+	  <property name="border_width">6</property>
 	  <property name="visible">True</property>
 	  <property name="homogeneous">False</property>
 	  <property name="spacing">0</property>
@@ -273,7 +274,7 @@
 
       <child>
 	<widget class="GtkAlignment" id="alignment_time_progress">
-	  <property name="border_width">5</property>
+	  <property name="border_width">6</property>
 	  <property name="visible">True</property>
 	  <property name="xalign">0.5</property>
 	  <property name="yalign">0.5</property>
@@ -302,7 +303,6 @@
 
       <child>
 	<widget class="GtkAlignment" id="alignment_control_buttons">
-	  <property name="border_width">5</property>
 	  <property name="visible">True</property>
 	  <property name="xalign">0.5</property>
 	  <property name="yalign">0.5</property>
@@ -315,9 +315,10 @@
 
 	  <child>
 	    <widget class="GtkHBox" id="hbox_control_buttons">
+	      <property name="border_width">6</property>
 	      <property name="visible">True</property>
 	      <property name="homogeneous">True</property>
-	      <property name="spacing">6</property>
+	      <property name="spacing">12</property>
 
 	      <child>
 		<widget class="GtkButton" id="button_previous">
